--- a/www/index.html
+++ b/www/index.html
@@ -1,22 +1,23 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	
-	<link rel="apple-touch-icon" sizes="180x180" href="/statics/icons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/statics/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/statics/icons/favicon-16x16.png">
-	<link rel="manifest" href="/statics/icons/site.webmanifest">
-	<link rel="mask-icon" href="/statics/icons/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#da532c">
- 
-	<meta name="theme-color" content="#ffffff">    <title>Festival</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<!-- CSS    -->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-	<link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/statics/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/statics/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/statics/icons/favicon-16x16.png">
+    <link rel="manifest" href="/statics/icons/site.webmanifest">
+    <link rel="mask-icon" href="/statics/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+
+    <meta name="theme-color" content="#ffffff">
+    <title>Festival</title>
+
+    <!-- CSS    -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 <body>
     <!-- #region navbar  -->
@@ -71,17 +72,37 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <br><br>
-                <h1 class="header center materialize-red-text text-darken-1">Festival</h1>
+                <h1 class="center materialize-red-text text-darken-1">Festival</h1>
                 <div class="row center">
                     <h5 class="header col s12 light materialize-red-text text-darken-4" style="font-weight: bold">Lots of events!</h5>
                 </div>
                 <br><br>
-
             </div>
+        </div>
+        <div class="parallax">
+            <img src="statics/index_background.jpg" alt="Unsplashed background img 1" style="transform: translate3d(50%, -21.1086px, 0px); opacity: 1;">
+        </div>
+    </div>
+    <div class="container">
+        <h5 class="center">Summer festival</h5>
+
+        <p class="light">We gathered events and shows to celebrate the starting of the new farmer year and all that. You'll find amazing performances and performers, as well as events and seminarsfor on each topic you'd be willing to know. Dive in and open your mind!</p>
+    </div>
+    <div class="parallax-container valig-wrapper">
+        <div class="parallax">
+            <img src="statics/index_background.jpg" alt="Unsplashed background img 1" style="transform: translate3d(50%, -21.1086px, 0px); opacity: 1;">
         </div>
     </div>
 
+    <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+            <ul class="left">
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Reservations</a></li>
+            </ul>
 
+        </div>
+    </nav>
     <footer class="page-footer teal">
         <div class="container">
             <div class="row">
@@ -90,15 +111,6 @@
                     <p class="grey-text text-lighten-4">I'm a CS student, passionate about developement and networking, security and embedded systems.<br>This is my assignment for the Hypermedia Applications (web and multimedia) course at Politecnico di Milano.</p>
 
 
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Settings</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Connect</h5>
