--- a/www/event.html
+++ b/www/event.html
@@ -104,6 +104,15 @@
     </div>
 
 
+    <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+            <ul class="left">
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Reservations</a></li>
+            </ul>
+
+        </div>
+    </nav>
     <footer class="page-footer teal">
         <div class="container">
             <div class="row">
@@ -112,15 +121,6 @@
                     <p class="grey-text text-lighten-4">I'm a CS student, passionate about developement and networking, security and embedded systems.<br>This is my assignment for the Hypermedia Applications (web and multimedia) course at Politecnico di Milano.</p>
 
 
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Settings</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Connect</h5>
@@ -172,8 +172,8 @@
                 }
                 else {
                     let artist = JSON.parse( this.responseText )[0];
-                    document.getElementById( "author" ).querySelector("a").innerHTML = artist.Name;
-                    document.getElementById( "author" ).querySelector("a").setAttribute( "href", "/performers/" + artist.ArtistID );
+                    document.getElementById( "author" ).querySelector( "a" ).innerHTML = artist.Name;
+                    document.getElementById( "author" ).querySelector( "a" ).setAttribute( "href", "/performers/" + artist.ArtistID );
 
                 }
             }
